--- a/app/src/main/res/drawable/ic_round_photo_camera_24.xml
+++ b/app/src/main/res/drawable/ic_round_photo_camera_24.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/black">
+    android:tint="@color/teal_200">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M12,12m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"/>
